tests/core/data/csl/TypeLoaderTests/SyntaxError/struct3.csl
struct struct3
{
	attribute string name;
;
